@@ -4,6 +4,7 @@ import com.dtstack.jlogstash.config.JdbcConfig;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
@@ -31,7 +32,8 @@ public class JdbcClientUtil {
         Thread.currentThread().setContextClassLoader(null);
 
         // 加载驱动包
-        URL file_url = new URL("file:/" + config.getJdbc_driver_library());
+        File driverJarFile = new File(config.getJdbc_driver_library());
+        URL file_url = driverJarFile.toURI().toURL();
         URLClassLoader loader = new URLClassLoader(new URL[]{file_url}, JdbcClientUtil.class.getClassLoader());
 
         // 用户名、密码
